test/data/codegen/valid/entity_node_projected_one/queries.cypher
// name: OnePerson :one
MATCH (p:Person) RETURN p
