test/data/codegen/invalid/identifier_collision_entity_row/queries.cypher
// name: Person :one
MATCH (p:Person) RETURN p
